--- a/README_.adoc
+++ b/README_.adoc
@@ -82,15 +82,6 @@ image:docs/store/Flaskr_Main_Twins/20220410_101903/objects/ccb41731a97c99d268c36
 image:docs/images/Sample4_Flaskr/Flaskr_VisualInspectionTwins.png[]
 
 
-=== How to run the test
-
-Just open the "Test Cases/Flaskr/VisualInspectionTwins" and run it. As default Chrome Headless browser git will be used, but you can choose any browser. You can choose any Execution Profile. The test won't be affected by the profile you chose.
-
-The test case will take approximately 30 seconds to finish.
-
-The test case will write the report in the `<projectDir>/store/Flaskr_VisualInspectionTwins-index.html` file.
-
-== Description
 
 === What is the Flaskr app?
 
@@ -101,6 +92,8 @@ This tutorial will walk you through creating a basic blog application called Fla
 ____
 
 I used the Flasrk source code 99% as is. I amended it slightly to display the site logo in the Dev env only.
+
+
 
 === How the test is coded
 
@@ -114,30 +107,31 @@ You can read the sources
 - link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Scripts/main/Flaskr/reduceTwins/Script1650172681527.groovy[Test Cases/main/Flaskr/reduceTwins]
 - link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Scripts/main/Flaskr/report/Script1646272301192.groovy[Test Cases/main/Flaskr/report]
 
-and a lot of related Groovy classes:
 
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/actions/Action.java[pom/actions/Action.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/actions/ActionListener.groovy[pom/actions/ActionListener.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/actions/ActionListenerBaseImpl.groovy[pom/actions/ActionListenerBaseImpl.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/actions/LoginAction.groovy[pom/actions/LoginAction.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/actions/LogoutAction.groovy[pom/actions/LogoutAction.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/actions/PostAction.groovy[pom/actions/PostAction.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/data/Song.groovy[pom/data/Song.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/data/Songs.groovy[pom/data/Songs.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/data/User.groovy[pom/data/User.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/pages/auth/LoginPage.groovy[pom/pages/auth/LoginPage.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/pages/auth/RegisterCredentialPage.groovy[pom/pages/auth/RegisterCredentialPage.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/pages/blog/CreatePostPage.groovy[pom/pages/blog/CreatePostPage.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/pages/blog/IndexPage.groovy[pom/pages/blog/IndexPage.groovy]
-- link:https://github.com/kazurayam/VisualInspection_with_PageObjectModel_in_KatalonStudio/blob/master/Include/scripts/groovy/com/kazurayam/uitestjava/flaskr/pom/pages/blog/Post.groovy[pom/pages/blog/Post.groovy]
-
-Why do I have these Groovy classes? --- It is because I employed the link:https://www.guru99.com/page-object-model-pom-page-factory-in-selenium-ultimate-guide.html["Page Object Model"]. The Page Object Model helped me in writing compact and readable codes.
+=== Importing the POM classes source
 
 The POM classes are developed outside Katalon Studio. I developed the POM classes in the following project:
 
 - https://github.com/kazurayam/MyPythonProjectTemplate/tree/master/uitestjava
 
 and the `importSourceOfFlaskrPOM` task defined in the `build.gradle` copies the source from the origin to this project. 
+
+Why do I have these Groovy classes? --- It is because I employed the link:https://www.guru99.com/page-object-model-pom-page-factory-in-selenium-ultimate-guide.html["Page Object Model"]. The Page Object Model helped me in writing compact and readable codes.
+
+
+=== How to run the test
+
+Just run the `Test Cases/main/Flaskr/Main_Twins`.
+
+As default Chrome Headless browser will be used. But you can choose any browser. 
+
+You can choose any Execution Profile. The test won't be affected by the profile you chose.
+
+The test case will take approximately 30 seconds to finish.
+
+The test case will write the report at
+
+- `<projectDir>/store/Flaskr_Main_Twins-index.html`
 
 
 == Environment setup
