--- a/README_.adoc
+++ b/README_.adoc
@@ -74,7 +74,7 @@ image:docs/images/Sample4_Flaskr/site_logo.png[]
 |===
 
 4. The test case compares each pairs of URLs and generates diff images. The following is an example of a diff image. Please find the section on the top-left side painted red, which is the diff.
-image:store/Flaskr_Main_Twins/20221016_135331/objects/9be93b215e9bb046286cf0b06ed80d2badce4bca.png[]
+image:https://kazurayam.github.io/VisualInspection_with_PageObjectModel_in_KatalonStudio/store/Flaskr_Main_Twins/20221016_135331/objects/9be93b215e9bb046286cf0b06ed80d2badce4bca.png[]
 
 5. The test case generates a HTML report which shows a list all of the materials (screenshot images and HTML page sources) attached with detail diff information. You can find an example link:https://kazurayam.github.io/VisualInspection_with_PageObjectModel_in_KatalonStudio/store/Flaskr_Main_Twins-index.html[here].
 
